# firpm

./: CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md
doc/: CMakeLists.txt  Doxyfile.in
firpm_d/: CMakeLists.txt  README.md
firpm_d/include/firpm/: balancing.h  band.h  barycentric.h  cheby.h  eigenvalue.h  pm.h  pmmath.h  util.h
firpm_d/src/: CMakeLists.txt  balancing.cpp  band.cpp  barycentric.cpp  cheby.cpp  eigenvalue.cpp  pm.cpp
firpm_d/test/: extensive_tests.cpp  scaling_tests.cpp
firpm_ld/: CMakeLists.txt  README.md
firpm_ld/include/firpm/: balancing.h  band.h  barycentric.h  cheby.h  eigenvalue.h  pm.h  util.h
firpm_ld/src/: CMakeLists.txt  balancing.cpp  band.cpp  barycentric.cpp  cheby.cpp  eigenvalue.cpp  pm.cpp
firpm_ld/test/: extensive_tests.cpp  scaling_tests.cpp
firpm_mp/: CMakeLists.txt  README.md
firpm_mp/doc/: Doxyfile.in
firpm_mp/include/: mpreal.h
firpm_mp/include/firpm/: balancing.h  band.h  barycentric.h  cheby.h  eigenvalue.h  pm.h  util.h
firpm_mp/src/: CMakeLists.txt  balancing.cpp  band.cpp  barycentric.cpp  cheby.cpp  eigenvalue.cpp  pm.cpp
firpm_mp/test/: extensive_tests.cpp  scaling_tests.cpp
include/: firpm.h
include/firpm/: band.h  barycentric.h  cheby.h  pm.h  pmmath.h  util.h
py/: bindings.cpp
src/: CMakeLists.txt  band.cpp  barycentric.cpp  cheby.cpp  pm.cpp
test/: CMakeLists.txt  extensive_tests.cpp  firpm_tests.py  scaling_tests.cpp
